# flow7

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/api/: Pipfile  docker-compose.yml  init.sql  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: health.py
apps/api/app/core/: config.py  database.py
apps/web/app/: layout.tsx  page.module.css  page.tsx
