[project]
  name = "flow7-api"
  version = "0.1.0"
  description = "Flow7 AI Agent Platform API"
  requires-python = ">=3.11"
  dependencies = [
      "fastapi>=0.104.0",
      "uvicorn[standard]>=0.24.0",
      "sqlalchemy>=2.0.23",
      "psycopg2-binary>=2.9.9",
      "alembic>=1.12.1",
      "pydantic>=2.5.0",
      "pydantic-settings>=2.1.0"
  ]

  [project.optional-dependencies]
  dev = [
      "pytest>=7.4.3",
      "black>=23.11.0",
      "ruff>=0.1.6"
  ]
